--- a/components/frontend/src/measurement/StatusIcon.css
+++ b/components/frontend/src/measurement/StatusIcon.css
@@ -13,3 +13,7 @@ i.inverted.circular.icon.near_target_met {
 i.inverted.circular.icon.debt_target_met {
     background-color: rgb(140,140,140) !important;
 }
+
+i.inverted.circular.icon.informative {
+    background-color: rgb(0,165,255) !important;
+}
