Add Performancetest-runner as source for the source code version metric.

--- a/components/testdata/reports/performancetest-runner/loadtestreport.html
+++ b/components/testdata/reports/performancetest-runner/loadtestreport.html
@@ -172,7 +172,7 @@
 <table class="config">
 	<tr><td class="name">Comment</td><td id="comment">Gegenereerd vanuit de TestStraat</td></tr>
 <tr><td>&nbsp</td></tr>
-	<tr><td class="name">Application version</td><td id="application_version"></td></tr>
+	<tr><td class="name">Application version</td><td id="application_version">1.2.3</td></tr>
 	<tr><td class="name">Workload</td><td id="workload">productie</td></tr>
 	<tr><td class="name">Loadgenerator</td><td id="loadgenerator">JMeter</td></tr>
 	<tr><td class="name">Start of the test</td><td id="start_of_the_test">2020.07.10.01.51.24</td></tr>
