The target column would show the technical debt target value instead of the target value when technical debt was accepted. Fixed by always displaying the target value. In addition, if technical debt is accepted, the target value has a grey label. On hovering, a popup shows the technical debt target value and the technical debt end date, if any. Fixes #4171.

--- a/components/frontend/src/semantic_ui_react_wrappers/Label.css
+++ b/components/frontend/src/semantic_ui_react_wrappers/Label.css
@@ -2,6 +2,10 @@
     color: rgba(255, 255, 255, 0.87) !important;
 }
 
+.ui.inverted.grey.label {
+    background-color: rgba(118, 118, 118, 0.87) !important;
+}
+
 .ui.label > a {
     opacity: 1.0;
 }
