Make CSS for negative message headers in inverted popups for specific to prevent it being to other popups.

--- a/components/frontend/src/semantic_ui_react_wrappers/Popup.css
+++ b/components/frontend/src/semantic_ui_react_wrappers/Popup.css
@@ -2,7 +2,7 @@
     background-color: rgba(60, 65, 70);
 }
 
-.ui.inverted.popup .header {
+.ui.inverted.popup .negative.message .header {
     color: #912d2b; /* For some reason the header color is white within an inverted popup. Override. */
 }
 
