--- a/components/frontend/src/semantic_ui_react_wrappers/Form.css
+++ b/components/frontend/src/semantic_ui_react_wrappers/Form.css
@@ -34,6 +34,7 @@ form.ui.inverted.form div.menu {
 
 form.ui.inverted.form div.menu .item {
     border-top: 1px solid transparent;
+    background: rgba(50, 50, 50) !important;
     color: rgba(255, 255, 255, 0.87) !important;
 }
 
