--- a/components/frontend/src/fields/DateInput.css
+++ b/components/frontend/src/fields/DateInput.css
@@ -1,3 +1,3 @@
 form > div.field {
-    width: 100%;
+    width: 100%;  /* Unfortunately, the date picker does not support fluid, so use this as a work-around */
 }
